Update Spark 4.0 examples: Maven dependencies, sbt support, and bug fixes
- Configure sbt build to use Maven Central (version 0.9.0)
- Add local JAR option for debugging (commented out)
- Fix Arrow JVM options to remove unknown module warnings
- Remove redundant ssl configuration from examples
- Update README with Gradle, sbt, and spark-submit instructions
- Add environment variable documentation
- Add Apache License header to build.properties
- Update both SimpleBatchExample and StreamingRateExample